# reduce

./: .env.example  .gitignore  CONTRIBUTING.adoc.future  COPYING  Cargo.toml  MAINTAIN.adoc  README.adoc  README.md  bootstrap.adoc  compose.yaml  core.mprocs.yaml  mprocs.yaml  package-lock.json  package.json  pnpm-lock.yaml  seed  tailwind.config.js
core/src/: lib.rs  main.rs  routes.rs
core/src/subsystem/: time_report.rs
core/src/subsystem/time_report/: handler.rs
core/templates/api/time-reports/: add.html  list-category.html
core/templates/api/time-reports/add/: item.html  result.html
css/: index.css
migrations/: 0001_v0_1.sql
pyreduce/: Cargo.toml  pyproject.toml  pyreduce.pyi
pyreduce/python/pyreduce/: __init__.pyi
pyreduce/src/: lib.rs
reduce-core/: Cargo.toml  tailwind.config.js
reduce-core/css/: index.css
reduce-core/migrations/: 0001_v0_1.sql
reduce-core/src/: error.rs  extensions.rs  extractors.rs  lib.rs  middleware.rs  routes.rs  sections.rs  subsystem.rs  template_extend.rs
reduce-core/src/error/: templates.rs
reduce-core/src/extractors/: csrf_form.rs
reduce-core/src/middleware/: inject_user_authorization.rs  require_authentication.rs
reduce-core/src/middleware/require_authentication/: templates.rs
reduce-core/src/sections/: account.rs  auth.rs  upkeep.rs
reduce-core/src/sections/account/: database.rs  templates.rs
reduce-core/src/sections/auth/: database.rs  templates.rs
reduce-core/src/sections/upkeep/: templates.rs
reduce-core/src/subsystem/: upkeep.rs
reduce-core/src/subsystem/time_report/: logic.rs
reduce-core/src/subsystem/time_report/handler/: params.rs
reduce-core/src/subsystem/upkeep/: database.rs  handler.rs  templates.rs
reduce-core/templates/: index.html  time-reports.html
reduce-core/templates/api/time-reports/: add.html  delete_result.html  index.html  list-category.html  list-item.html  picker.html
reduce-core/templates/api/time-reports/add/: extra.html  item.html  result.html
reduce-core/templates/error/: server_error.html  unauthorized.html
reduce-core/templates/layouts/: default.html  fallback.html
reduce-core/templates/modules/upkeep/: index.html  item-card.part.html
reduce-core/templates/sections/account/: index.html
reduce-core/templates/sections/account/authenticate-methods/: current-email-password.part.html  new-email-password.part.html
reduce-core/templates/sections/auth/: bootstrap.html  login.html
reduce-standard/: README.md  pyproject.toml  watch.py
reduce-standard/reduce_standard/: __main__.py
seeder/: README.md  pyproject.toml
seeder/src/seeder/: __init__.py  __main__.py  main.py
seeder/src/seeder/core/: __init__.py  account.py
src/: error.rs  main.rs  routes.rs
src/subsystem/: time_report.rs
src/subsystem/time_report/: database.rs  handler.rs  logic.rs  shared.rs  template.rs
src/subsystem/time_report/handler/: params.rs
templates/: index.html  time-reports.html
templates/api/time-reports/: add.html  delete_result.html  index.html  list-category.html  list-item.html  picker.html
templates/api/time-reports/add/: extra.html  item.html  result.html
templates/layouts/: default.html
