[package]
name = "pyreduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyreduce"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
reduce-core = { version = "0.1.0", path = "../core" }
tokio = "1.37.0"
