[package]
name = "reduce-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.2"
askama = "0.12.1"
askama_axum = "0.4.0"
askama_escape = "0.10.3"
async-trait = "0.1.80"
axum-extra.features = ["cookie"]
axum-extra.version = "0.9.3"
axum.features = ["macros"]
axum.version = "0.7.3"
base64 = "0.22.1"
chrono.features = ["serde"]
chrono.version = "0.4.31"
dotenv = "0.15.0"
itertools = "0.13.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.193"
serde_json.features = ["raw_value"]
serde_json.version = "1.0"
sqlx.features = ["postgres", "runtime-tokio-rustls", "json", "macros", "time", "chrono"]
sqlx.version = "0.7.3"
thiserror = "1.0.61"
tokio.features = ["full"]
tokio.version = "1.35.1"
tower = "0.4.13"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber.features = ["json"]
tracing-subscriber.version = "0.3.18"
